# AngleCorr

./: .travis.yml  Angle Correction.ipynb  CMakeLists.txt  README.md  angle_correction_impl.cpp  cxAngleCorrectionExecuter.cpp  cxAngleCorrectionExecuter.h  cxAngleCorrectionGUIExtenderService.cpp  cxAngleCorrectionGUIExtenderService.h  cxAngleCorrectionPluginActivator.cpp  cxAngleCorrectionPluginActivator.h  cxAngleCorrectionWidget.cpp  cxAngleCorrectionWidget.h  index.html  main.cpp  params.json
Tests/: CMakeLists.txt  CMakeLists.txt~  MethodTests.cpp
core/: AngleCorrection.cpp  AngleCorrection.h  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.hpp  adjlist.hpp  angle_correction_impl.cpp  angle_correction_impl.h  intersection.hpp  intersection_set.hpp  main.cpp  matrix.hpp  metaimage.hpp  plane3d.cpp  plane3d.hpp  precision.hpp  quadratic_spline_fitter.hpp  spline3d.hpp
core/Tests/: CMakeLists.txt  CatchMain.cpp  MethodTests.cpp  testExportWinHack.cpp  testExportWinHack.h  testHelper.cpp
core/lib/: ErrorHandler.hpp  adjlist.hpp  intersection.hpp  matrix.hpp  metaimage.hpp  quadratic_spline_fitter.hpp  spline3d.hpp  writeToFile.cpp
doc/: org.custusx.anglecorrection.md  org.custusx.anglecorrection.txt
lib/: CMakeLists.txt  ErrorHandler.cpp  helpers.hpp  intersection.hpp  intersection_set.hpp  metaimage.hpp  plane3d.hpp  precision.hpp  quadratic_spline_fitter.hpp  spline3d.hpp  tpreader.cpp  tpreader.hpp  writeToFile.cpp
testing/: CMakeLists.txt  cxtestAngleCorr.cpp  cxtestAngleCorr.h  testExportWinHack.h
